[gd_scene load_steps=14 format=3 uid="uid://b3ms8ciks6rcs"]

[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_rc3o2"]
[ext_resource type="PackedScene" uid="uid://bboyqu0jnm5cg" path="res://scenes/menu/components/background.tscn" id="2_5db0t"]
[ext_resource type="Script" path="res://scripts/cursor/cursor_configuration_menu.gd" id="2_mmugt"]
[ext_resource type="PackedScene" uid="uid://180a2q81phhy" path="res://scenes/menu/components/title_text.tscn" id="3_8oraa"]
[ext_resource type="FontFile" uid="uid://ba46ueuv40gco" path="res://assets/font/Montserrat-Bold.ttf" id="4_jlobb"]
[ext_resource type="PackedScene" uid="uid://cyx6wx7j7gmqa" path="res://scenes/menu/components/border_panel.tscn" id="5_q5ouv"]
[ext_resource type="PackedScene" uid="uid://crxlp4j1ka3r2" path="res://scenes/camera.tscn" id="6_t8p8r"]
[ext_resource type="PackedScene" uid="uid://cmw45nngcae4v" path="res://scenes/menu/components/acept_cancel_buttons.tscn" id="7_01jom"]
[ext_resource type="Script" path="res://scripts/cursor/line_trail.gd" id="7_qsrdo"]
[ext_resource type="PackedScene" uid="uid://cqdyjpbtoy343" path="res://scenes/menu/components/go_back.tscn" id="8_smhg0"]
[ext_resource type="PackedScene" uid="uid://bqq38nb1qecjb" path="res://scenes/menu/components/home.tscn" id="9_1gns7"]
[ext_resource type="PackedScene" uid="uid://jhfkcwhkj4oj" path="res://scenes/menu/components/help_button.tscn" id="10_xu8ue"]
[ext_resource type="PackedScene" uid="uid://s24jn5usad8q" path="res://scenes/menu/components/slider_field.tscn" id="12_nggvr"]

[node name="CursorConfiguration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rc3o2")
script = ExtResource("2_mmugt")

[node name="ColorRect" parent="." instance=ExtResource("2_5db0t")]
layout_mode = 0

[node name="TitleText" parent="." instance=ExtResource("3_8oraa")]
layout_mode = 0
offset_left = 394.0
offset_top = 59.0
offset_right = 1134.0
offset_bottom = 182.0
text = "Configuración"

[node name="Subtitle" type="Label" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 210.0
offset_right = 339.0
offset_bottom = 260.0
theme_override_fonts/font = ExtResource("4_jlobb")
theme_override_font_sizes/font_size = 40
text = "Cursor
"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 662.0
offset_right = 161.0
offset_bottom = 700.0
text = "Diseño"

[node name="Panel" parent="." instance=ExtResource("5_q5ouv")]
layout_mode = 0
offset_left = 508.0
offset_top = 218.0
offset_right = 1380.0
offset_bottom = 889.0

[node name="Camera" parent="Panel" instance=ExtResource("6_t8p8r")]
z_index = 1
layout_mode = 0
offset_left = 5.0
offset_top = 381.0
offset_right = 396.0
offset_bottom = 665.0

[node name="Node2D" type="Node2D" parent="Panel"]
position = Vector2(-508, -218)

[node name="Line2D" type="Line2D" parent="Panel/Node2D"]
script = ExtResource("7_qsrdo")

[node name="AceptCancel" parent="." instance=ExtResource("7_01jom")]
layout_mode = 1
offset_left = 329.0
offset_top = 941.0
offset_right = -333.0
offset_bottom = -27.0

[node name="GoBack" parent="." instance=ExtResource("8_smhg0")]
layout_mode = 0
offset_left = 42.0
offset_top = 29.0
offset_right = 142.0
offset_bottom = 129.0
scene = 4

[node name="Home" parent="." instance=ExtResource("9_1gns7")]
layout_mode = 0
offset_left = 1251.0
offset_top = 27.0
offset_right = 1347.0
offset_bottom = 123.0

[node name="HelpButton" parent="." instance=ExtResource("10_xu8ue")]
layout_mode = 0
offset_left = 1367.0
offset_top = 50.0
offset_right = 1417.0
offset_bottom = 100.0

[node name="VelocitySlider" parent="." instance=ExtResource("12_nggvr")]
layout_mode = 1
offset_left = 48.0
offset_top = 280.0
offset_right = -957.0
offset_bottom = -662.0

[node name="Label" parent="VelocitySlider" index="1"]
text = "Velocidad

"

[node name="HelpButton" parent="VelocitySlider" index="3"]
offset_left = 159.0
offset_top = -9.0
offset_right = 209.0
offset_bottom = 41.0

[node name="PointerSmootSlider" parent="." instance=ExtResource("12_nggvr")]
layout_mode = 1
offset_left = 48.0
offset_top = 403.0
offset_right = -957.0
offset_bottom = -539.0

[node name="Label" parent="PointerSmootSlider" index="1"]
text = "Suavisado del Cursor
"

[node name="HelpButton" parent="PointerSmootSlider" index="3"]
offset_left = 326.0
offset_top = -2.0
offset_right = 376.0
offset_bottom = 48.0

[node name="TicksSlider" parent="." instance=ExtResource("12_nggvr")]
layout_mode = 1
offset_left = 48.0
offset_top = 525.0
offset_right = -957.0
offset_bottom = -417.0

[node name="Label" parent="TicksSlider" index="1"]
text = "Tics por Segundo
"

[node name="HelpButton" parent="TicksSlider" index="3"]
offset_left = 263.0
offset_top = -2.0
offset_right = 313.0
offset_bottom = 48.0

[connection signal="mouse_entered" from="Panel" to="Panel/Node2D/Line2D" method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="Panel/Node2D/Line2D" method="_on_panel_mouse_exited"]
[connection signal="button_down" from="AceptCancel/Acept" to="." method="_on_acept_button_down"]
[connection signal="button_down" from="AceptCancel/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="value_changed" from="VelocitySlider" to="." method="_on_velocity_slider_value_changed"]
[connection signal="value_changed" from="PointerSmootSlider" to="." method="_on_pointer_smoot_slider_value_changed"]
[connection signal="value_changed" from="TicksSlider" to="." method="_on_ticks_slider_value_changed"]

[editable path="AceptCancel"]
[editable path="VelocitySlider"]
[editable path="PointerSmootSlider"]
[editable path="TicksSlider"]
